--- a/index.html
+++ b/index.html
@@ -105,6 +105,30 @@
         </div>
     </div>
     <div class="chapter">
+        <h1>Flex wrap</h1>
+        <div class="buttons">
+            <button id="FW1">Wrap</button>
+            <button id="FW2">Unwrap</button>
+            <button id="FW3">Wrap Reverse</button>
+        </div>
+        <h1>Align Content</h1>
+        <div class="buttons">
+            <div class="buttons">
+                <button id="AC1">Start</button>
+                <button id="AC2">End</button>
+                <button id="AC3">Flex Start</button>
+                <button id="AC4">Flex End</button>
+                <button id="AC5">Center</button>
+            </div>
+            <div class="buttons">
+                <button id="AC6">Space Around</button>
+                <button id="AC7">Space Between</button>
+                <button id="AC8">Space Evenly</button>
+                <button id="AC9">Stretch</button>
+                <button id="AC10">Baseline</button>
+                <button id="AC11">Normal</button>
+            </div>
+        </div>
         <div class="boxes" id="Wrap">
             <div class="box"><h1>1</h1></div>
             <div class="box"><h1>2</h1></div>
@@ -167,30 +191,16 @@
             <div class="box"><h1>59</h1></div>
             <div class="box"><h1>60</h1></div>
         </div>
-        <h1>Flex wrap</h1>
-        <div class="buttons">
-            <button id="FW1">Wrap</button>
-            <button id="FW2">Unwrap</button>
-            <button id="FW3">Wrap Reverse</button>
-        </div>
-        <h1>Align Content</h1>
-        <div class="buttons">
-            <div class="buttons">
-                <button id="AC1">Start</button>
-                <button id="AC2">End</button>
-                <button id="AC3">Flex Start</button>
-                <button id="AC4">Flex End</button>
-                <button id="AC5">Center</button>
-            </div>
-            <div class="buttons">
-                <button id="AC6">Space Around</button>
-                <button id="AC7">Space Between</button>
-                <button id="AC8">Space Evenly</button>
-                <button id="AC9">Stretch</button>
-                <button id="AC10">Baseline</button>
-                <button id="AC11">Normal</button>
-            </div>
-        </div>
+    </div>
+    <div class="chapter"><h1>Flex Flow = Flex Direction + Flex Wrap</h1>
+        <h2>flex-flow : row wrap;</h2>
+        <h2>flex-flow : row unwrap;</h2>
+        <h2>flex-flow : row wrap-reverse;</h2>
+        <h2>flex-flow : column wrap;</h2>
+        <h2>flex-flow : column unwrap;</h2>
+        <h2>flex-flow : column wrap-reverse;</h2>
+    </div>
+    <div class="chapter"><h1>Gap</h1>
     </div>
 </body>
 </html>
