--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
             <button id="FW3">Wrap Reverse</button>
         </div>
         <h1>Align Content</h1>
-        <div class="buttons">
             <div class="buttons">
                 <button id="AC1">Start</button>
                 <button id="AC2">End</button>
@@ -128,7 +127,6 @@
                 <button id="AC10">Baseline</button>
                 <button id="AC11">Normal</button>
             </div>
-        </div>
         <div class="boxes" id="Wrap">
             <div class="box"><h1>1</h1></div>
             <div class="box"><h1>2</h1></div>
@@ -201,6 +199,40 @@
         <h2>flex-flow : column wrap-reverse;</h2>
     </div>
     <div class="chapter"><h1>Gap</h1>
+        <div class="buttons">
+            <button id="G1">Gap</button>
+            <button id="G2">Row Gap</button>
+            <button id="G3">Column Gap</button>
+            <button id="G4">Row Column Gap</button>
+            <button id="G5">No Gap</button>
+        </div>
+    </div>
+    <div class="chapter"><h1>Flex Grow</h1>
+        <div class="boxes grow">
+            <div class="box"><h1>1</h1></div>
+            <div class="box"><h1>2</h1></div>
+            <div class="box" id="growbox"><h1>3</h1></div>
+            <div class="box"><h1>4</h1></div>
+            <div class="box"><h1>5</h1></div>
+        </div>
+    </div>
+    <div class="chapter"><h1>Flex Shrink</h1>
+        <div class="boxes shrink">
+            <div class="box"><h1>1</h1></div>
+            <div class="box"><h1>2</h1></div>
+            <div class="box" id="shrinkbox"><h1>3</h1></div>
+            <div class="box"><h1>4</h1></div>
+            <div class="box"><h1>5</h1></div>
+        </div>
+    </div>
+    <div class="chapter"><h1>Align Self</h1>
+        <div class="boxes">
+            <div class="box" id="up"><h1>1</h1></div>
+            <div class="box"><h1>2</h1></div>
+            <div class="box"><h1>3</h1></div>
+            <div class="box"><h1>4</h1></div>
+            <div class="box" id="down"><h1>5</h1></div>
+        </div>
     </div>
 </body>
 </html>
